unpackaged/main/default/objects/RICSC_Localisation__c/RICSC_Localisation__c.object-meta.xml
<CustomObject>
    <description>Object to represent localisation structure of each Maison on the country, market and region level</description>
    <label>Localisation</label>
    <nameField>
        <label>Localisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Localisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>