unpackaged/main/default/objects/RICSC_Localisation__c/fields/RICSC_LocalisationLevel__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LocalisationLevel__c</fullName>
        <label>Localisation Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>