unpackaged/main/default/objects/RICSC_Localisation__c/fields/RICSC_ParentLocalisation__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ParentLocalisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the higher level of Localisation</description>
        <label>Parent Localisation</label>
        <referenceTo>RICSC_Localisation__c</referenceTo>
        <relationshipLabel>Localisations</relationshipLabel>
        <relationshipName>RICSC_ParentLocalisation</relationshipName>
        <type>Lookup</type>
    </CustomField>